--- a/learning-angular/src/app/app.component.html
+++ b/learning-angular/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-content-card *ngFor="let item of contentList; index as i; first as isFirst" [content]="item"
-  [class.is-first]="isFirst" class="content-{{i}}"></app-content-card>
+<div *ngIf="true" class="break-up-my-stuff">
+  <span innerHTML="{{ title }} app is running!"></span>
+</div>
+
+<div class="break-up-my-stuff">
+  <span><span [innerHTML]="title"></span> app is running!</span>
+</div>
