--- a/learning-angular/src/app/app.component.scss
+++ b/learning-angular/src/app/app.component.scss
@@ -1,3 +1,9 @@
+.rebootCharacterWrapper{
+    margin: 16px 0;
+    button{
+        display: block;
+    }
+}
 .break-up-my-stuff{
     width: 100%;
 }
