--- a/MusicSite/src/app/content-card/content-card.component.html
+++ b/MusicSite/src/app/content-card/content-card.component.html
@@ -1,4 +1,19 @@
-<div class="song" [innerHTML]="musicList.htmlOutput(0)"></div>
-<div class="song" innerHTML="{{musicList.htmlOutput(1)}}"></div>
-<div class="song" [innerHTML]="musicList.htmlOutput(2)"></div>
-<div class="song" [innerHTML]="musicList.htmlOutput(3)"></div>
+<img *ngIf="song.imgUrl" (click)="showId()" [src]="song.imgUrl">
+<div class="author">
+    <strong>Artist:</strong> {{song.author}}
+</div>
+<div class="title">
+    <strong>Song Title:</strong> {{song.title}}
+</div>
+<div class="body">
+    {{song.body}}
+</div>
+<div class="type" *ngIf="song.type">
+    <strong>Genre:</strong> {{song.type}}
+</div>
+<div class="tags" *ngIf="song.tags">
+    <strong>Tags:</strong>
+    <span class="tag" *ngFor="let tag of song.tags; last as isLast">
+        {{ tag }}<span *ngIf="!isLast">, </span>
+    </span>
+</div>
