--- a/MusicSite/src/app/content-card/content-card.component.scss
+++ b/MusicSite/src/app/content-card/content-card.component.scss
@@ -1,7 +1,19 @@
-.song{
+:host{
     display: block;
-    border: 1px solid #000;
+    border: 1px solid #f00;
+    border-radius:10px;
     margin: 10px auto;
+    padding: 16px;
     width: 400px;
-    height: 600px;
+}
+:host.is-last{
+    border: 2px solid #000;
+}
+img{
+    display: block;
+    margin: 0 auto;
+    width: 350px;
+}
+div{
+    text-align: center;
 }
