--- a/learning-angular/src/app/app.component.html
+++ b/learning-angular/src/app/app.component.html
@@ -1,3 +1,13 @@
+<h3>Week 5 below this line</h3>
+<hr>
+
+<div>
+  This is a <span appHighlight color="green">whole</span> bunch of <span appHighlight>text</span>
+</div>
+
+<h3>Week 4 below this line</h3>
+<hr>
+
 <div class="rebootCharacterWrapper">
   <h4>Template reference variable</h4>
   This is bob <input #bob>
