--- a/learning-angular/src/app/content-card/content-card.component.scss
+++ b/learning-angular/src/app/content-card/content-card.component.scss
@@ -21,3 +21,12 @@
     margin: 0 auto;
     display: inline-block;
 }
+.spiderman{
+    color: #ff0000;
+    background-color:#0000ff;
+    display: block;
+}
+.randomhero{
+    color: #00ff00;
+    background-color:#0000ff;
+}
