--- a/learning-angular/src/app/content-card/content-card.component.html
+++ b/learning-angular/src/app/content-card/content-card.component.html
@@ -1,14 +1,25 @@
 <img class="poster-image" [src]="content.imageURL">
-<div>
-    the ID is {{content.id}}
+<div [style.color]="'dodgerblue'">
+    the <span appHighlight>ID</span> is {{content.id}}
 </div>
-<div class="name" *ngIf="content.name === 'Spiderman'">
-    {{content.name}}
+<div class="name-wrapper" [ngSwitch]="content.name">
+    <div class="name spiderman" *ngSwitchCase='"Spiderman"'>
+        Best hero ever: {{content.name}}
+    </div>
+    <div class="name ironman" *ngSwitchCase='specialCheck'>
+        He has a heart thing: {{content.name}}
+    </div>
+    <div class="name randomhero" *ngSwitchDefault>
+        Some other hero that isn't as cool
+    </div>
 </div>
 <div class="description">
     {{content.description}}
 </div>
-<div class="current-location">
+<!-- <div class="current-location">
     {{ content | defaultType }}
-    <!-- This will make sure a location is show no matter what  -->
+     This will make sure a location is show no matter what 
+</div> -->
+<div class="location" *ngIf="content.currentLocation">
+    {{ content.currentLocation}}
 </div>
