--- a/MusicSite/src/app/content-card/content-card.component.scss
+++ b/MusicSite/src/app/content-card/content-card.component.scss
@@ -9,6 +9,19 @@
 :host.is-last{
     border: 2px solid #000;
 }
+:host.metal{
+    border: 2px solid #ff00ff;
+}
+:host.power-metal{
+    border: 2px solid #00ffff;
+}
+:host.pop{
+    border: 2px solid #999999;
+}
+:host.highlight-me{
+    background-color: #000;
+    color: #ffff00;
+}
 img{
     display: block;
     margin: 0 auto;
