--- a/MusicSite/src/app/content-card/content-card.component.html
+++ b/MusicSite/src/app/content-card/content-card.component.html
@@ -1,9 +1,15 @@
-<img *ngIf="song.imgUrl" (click)="showId()" [src]="song.imgUrl">
+<div [ngSwitch]="song.imgUrl">
+    <img *ngSwitchCase="null" src="https://angular.io/assets/images/logos/angularjs/AngularJS-Shield.svg">
+    <img *ngSwitchDefault (click)="showId()" [src]="song.imgUrl">
+</div>
+
+<!-- <img *ngIf="song.imgUrl" (click)="showId()" [src]="song.imgUrl">
+<img *ngIf="!song.imgUrl" src="https://angular.io/assets/images/logos/angularjs/AngularJS-Shield.svg"> -->
 <div class="author">
     <strong>Artist:</strong> {{song.author}}
 </div>
 <div class="title">
-    <strong>Song Title:</strong> {{song.title}}
+    <strong>Song Title:</strong> <span appHoverStyle hoverStyle="text-decoration">{{song.title}}</span>
 </div>
 <div class="body">
     {{song.body}}
@@ -14,6 +20,6 @@
 <div class="tags" *ngIf="song.tags">
     <strong>Tags:</strong>
     <span class="tag" *ngFor="let tag of song.tags; last as isLast">
-        {{ tag }}<span *ngIf="!isLast">, </span>
+        <span appHoverStyle hoverStyle="font-weight">{{ tag }}</span><span *ngIf="!isLast">, </span>
     </span>
 </div>
