--- a/MusicSite/src/app/content-list/content-list.component.html
+++ b/MusicSite/src/app/content-list/content-list.component.html
@@ -1,3 +1,6 @@
+<app-create (addContentEvent)="addContentToList($event)" (updateContentEvent)="updateContentToList($event)">
+</app-create>
+
 <form onsubmit="return false;">
     <input #checkTitle>
     <button type="submit" (click)="checkIfTitleExists(checkTitle.value)">Does it exist?</button>
@@ -10,7 +13,7 @@
     *ngFor="let song of musicList; last as isLast; first as isFirst" [class.is-last]="isLast" [song]="song"
     [class.highlight-me]="checkTitle.value === song.title">
 </app-content-card>
-
+<!-- 
 <app-content-card appHoverCard [borderVisible]="isLast || isFirst"
     *ngFor="let song of musicList | typeFilter: 'metal'; last as isLast; first as isFirst" [class.is-last]="isLast"
     [song]="song" [class.highlight-me]="checkTitle.value === song.title" class="metal">
@@ -24,4 +27,4 @@
 <app-content-card appHoverCard [borderVisible]="isLast || isFirst"
     *ngFor="let song of musicList | typeFilter: 'Pop'; last as isLast; first as isFirst" [class.is-last]="isLast"
     [song]="song" class="pop" [class.highlight-me]="checkTitle.value === song.title">
-</app-content-card>
+</app-content-card> -->
