--- a/MusicSite/src/app/create/create.component.html
+++ b/MusicSite/src/app/create/create.component.html
@@ -1,39 +1,1 @@
-<div>
-    <label>
-        Id: <input [(ngModel)]="tempId">
-    </label>
-</div>
-<div>
-    <label>
-        Author: <input [(ngModel)]="newContent.author">
-    </label>
-</div>
-<div>
-    <label>
-        imgUrl: <input [(ngModel)]="newContent.imgUrl">
-    </label>
-</div>
-<div>
-    <label>
-        Type: <input [(ngModel)]="newContent.type">
-    </label>
-</div>
-<div>
-    <label>
-        Title: <input [(ngModel)]="newContent.title">
-    </label>
-</div>
-<div>
-    <label>
-        Body: <input [(ngModel)]="newContent.body">
-    </label>
-</div>
-<div>
-    <label>
-        Tags: <input [(ngModel)]="tempTags">
-    </label>
-</div>
-<div>
-    <button (click)="addCoconut()">Add Song</button>
-    <button (click)="updateCoconut()">Update Song</button>
-</div>
+<button mat-raised-button color="primary" (click)="openDialog()">Create Content</button>
