--- a/MusicSite/src/app/create/create.component.html
+++ b/MusicSite/src/app/create/create.component.html
@@ -1,1 +1,1 @@
-<button mat-raised-button color="primary" (click)="openDialog()">Create Content</button>
+<button mat-raised-button color="primary" (click)="openDialog()">Create Content</button>y
