--- a/MusicSite/src/app/app.component.html
+++ b/MusicSite/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-content-list></app-content-list>
+<!--<app-content-list></app-content-list>-->
 <!-- <app-messages></app-messages> -->
+<div class="links">
+<a routerLink="content" routerLinkActive="active">Content List Page</a><br>
+<a routerLink="content/42" routerLinkActive="active">Content Detail Page</a><br>
+<a routerLink="thiswillnotwork" routerLinkActive="active">Invalid page link</a><br>
+<router-outlet></router-outlet>
+</div>
