--- a/MusicSite/src/app/content-detail/content-detail.component.html
+++ b/MusicSite/src/app/content-detail/content-detail.component.html
@@ -1,15 +1,18 @@
-<a [ngSwitch]="song.imgUrl" routerLink="content/{{song.id}}">
+<div [ngSwitch]="song.imgUrl">
     <img *ngSwitchCase="null" src="https://angular.io/assets/images/logos/angularjs/AngularJS-Shield.svg">
-    <img *ngSwitchDefault (click)="showId()" [src]="song.imgUrl">
-</a>
-
-<!-- <img *ngIf="song.imgUrl" (click)="showId()" [src]="song.imgUrl">
-<img *ngIf="!song.imgUrl" src="https://angular.io/assets/images/logos/angularjs/AngularJS-Shield.svg"> -->
+    <img *ngSwitchDefault [src]="song.imgUrl">
+</div>
 <div class="author">
     <strong>Artist:</strong> {{song.author}}
 </div>
 <div class="title">
     <strong>Song Title:</strong> <span appHoverStyle hoverStyle="text-decoration">{{song.title}}</span>
+</div>
+<div class="body">
+    {{song.body}}
+</div>
+<div class="type" *ngIf="song.type">
+    <strong>Genre:</strong> {{song.type}}
 </div>
 <div class="tags" *ngIf="song.tags">
     <strong>Tags:</strong>
@@ -24,3 +27,4 @@
         <span appHoverStyle hoverStyle="font-weight">{{ tag }}</span><span *ngIf="!isLast">, </span>
     </span> -->
 </div>
+<a routerLink="/">Go back to the list</a>
