--- a/MusicSite/src/app/app.component.html
+++ b/MusicSite/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-content-list></app-content-list> -->
 <!-- <app-messages></app-messages> -->
-<div>This is always at the top of the page</div>
+<div>This is always at the top of the page ha!</div>
+
 <router-outlet></router-outlet>
